# Cl-assistant

./: README.md  ai.sh  completion.sh  pyproject.toml  test.sh
core/: assistant.py  cli.py
core/v1/: cli.py
core/v2/: assistant.py
